# PhASCII

./: .gitignore  AGENTS.md  BENCHMARK_PLAN.md  Cargo.toml  DECISIONS.md  PLAN.md  QUALITY_RUBRIC.md  README.md  SPEC.md
.github/workflows/: ci.yml
crates/phascii-cli/: Cargo.toml
crates/phascii-cli/src/: main.rs
crates/phascii-cli/tests/: preview_output.rs
crates/phascii-core/: Cargo.toml
crates/phascii-core/src/: config.rs  error.rs  lib.rs  metrics.rs  output.rs  render.rs  transform.rs
crates/phascii-core/tests/: jpg_fixture.rs
prompts/: SUBAGENT_REPORT_TEMPLATE.md  SUBAGENT_SYSTEM_PROMPT.md
reports/quality/: m3a-local-preview-report.md  m3b-width-comparison-report.md  m3c-visual-width-decision.md  m3d-tone-controls-report.md
scripts/: check_text_hygiene.py
tasks/: M0_BOOTSTRAP.md  M1_CORE_TRANSFORM.md  M2_RENDER_PREVIEW.md  M3_QUALITY_COMPARISON.md
test-assets/: README.md
