[package]
name = "phascii-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "jpg", "png-preview"]
std = []
jpg = ["dep:image"]
png-preview = ["dep:image", "image/png", "dep:font8x8"]
parallel = []
android-jni = []
wasm = []

[dependencies]
image = { version = "0.24.9", default-features = false, features = ["jpeg"], optional = true }
font8x8 = { version = "0.3.1", optional = true }
